corrected img path

--- a/pages/plants.html
+++ b/pages/plants.html
@@ -36,10 +36,11 @@
     <header class="header-navbar">
       <nav>
         <h1>
-          <img class="logo-img" src="/assets/images/logo.png" alt="" /><a
-            href="../index.html"
-            >bloom</a
-          >
+          <img
+            class="logo-img"
+            src="pre-entrega-3/assets/images/logo.png"
+            alt=""
+          /><a href="../index.html">bloom</a>
         </h1>
         <ul class="navbar-links">
           <li><a href="" class="navbar-link">Plants</a></li>
