--- a/pages/plants.html
+++ b/pages/plants.html
@@ -34,40 +34,69 @@
   </head>
   <body>
     <header class="header-navbar">
-      <nav>
-        <h1>
-          <img class="logo-img" src="../assets/images/logo.png" alt="" /><a
+      <div class="container">
+        <div class="d-flex align-items-center">
+          <a
             href="../index.html"
-            >bloom</a
+            class="w-100 d-flex align-items-center text-decoration-none"
           >
-        </h1>
-        <ul class="navbar-links">
-          <li><a href="" class="navbar-link">Plants</a></li>
-          <li><a href="./care.html" class="navbar-link">Care</a></li>
-          <li><a href="./gifts.html" class="navbar-link">Gifts</a></li>
-          <li><a href="./contact.html" class="navbar-link">Contact</a></li>
-          <li><a href="./about.html" class="navbar-link">About</a></li>
-        </ul>
-        <div class="btn-group navbar-menu">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <i class="bi bi-list menu-icon"></i>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a href="" class="navbar-link">Plants</a></li>
-            <li><a href="./care.html" class="navbar-link">Care</a></li>
-            <li><a href="./gifts.html" class="navbar-link">Gifts</a></li>
-            <li>
-              <a href="./contact.html" class="navbar-link">Contact</a>
-            </li>
-            <li><a href="./about.html" class="navbar-link">About</a></li>
-          </ul>
+            <img class="logo-img" src="../assets/images/logo.png" alt="" />
+            <h1>bloom</h1>
+          </a>
+          <div>
+            <nav>
+              <ul class="navbar-links">
+                <li>
+                  <a href="../pages/plants.html" class="navbar-link">Plants</a>
+                </li>
+                <li>
+                  <a href="../pages/care.html" class="navbar-link">Care</a>
+                </li>
+                <li>
+                  <a href="../pages/gifts.html" class="navbar-link">Gifts</a>
+                </li>
+                <li>
+                  <a href="../pages/contact.html" class="navbar-link"
+                    >Contact</a
+                  >
+                </li>
+                <li>
+                  <a href="../pages/about.html" class="navbar-link">About</a>
+                </li>
+              </ul>
+              <div class="btn-group navbar-menu">
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <i class="bi bi-list menu-icon"></i>
+                </button>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a href="./pages/plants.html" class="navbar-link">Plants</a>
+                  </li>
+                  <li>
+                    <a href="./pages/care.html" class="navbar-link">Care</a>
+                  </li>
+                  <li>
+                    <a href="./pages/gifts.html" class="navbar-link">Gifts</a>
+                  </li>
+                  <li>
+                    <a href="./pages/contact.html" class="navbar-link"
+                      >Contact</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./pages/about.html" class="navbar-link">About</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
         </div>
-      </nav>
+      </div>
     </header>
 
     <main>
