--- a/pages/contact.html
+++ b/pages/contact.html
@@ -26,6 +26,10 @@
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
@@ -34,70 +38,106 @@
   </head>
   <body>
     <header class="header-navbar">
-      <nav>
-        <h1>
-          <img class="logo-img" src="../assets/images/logo.png" alt="" /><a
+      <div class="container">
+        <div class="d-flex align-items-center">
+          <a
             href="../index.html"
-            >bloom</a
+            class="w-100 d-flex align-items-center text-decoration-none"
           >
-        </h1>
-        <ul class="navbar-links">
-          <li><a href="./plants.html" class="navbar-link">Plants</a></li>
-          <li><a href="./care.html" class="navbar-link">Care</a></li>
-          <li><a href="./gifts.html" class="navbar-link">Gifts</a></li>
-          <li><a href="" class="navbar-link">Contact</a></li>
-          <li><a href="./about.html" class="navbar-link">About</a></li>
-        </ul>
-        <div class="btn-group navbar-menu">
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <i class="bi bi-list menu-icon"></i>
-          </button>
-          <ul class="dropdown-menu">
-            <li><a href="./plants.html" class="navbar-link">Plants</a></li>
-            <li><a href="./care.html" class="navbar-link">Care</a></li>
-            <li><a href="./gifts.html" class="navbar-link">Gifts</a></li>
-            <li><a href="" class="navbar-link">Contact</a></li>
-            <li><a href="./about.html" class="navbar-link">About</a></li>
-          </ul>
+            <img class="logo-img" src="../assets/images/logo.png" alt="" />
+            <h1>bloom</h1>
+          </a>
+          <div>
+            <nav>
+              <ul class="navbar-links">
+                <li>
+                  <a href="../pages/plants.html" class="navbar-link">Plants</a>
+                </li>
+                <li>
+                  <a href="../pages/care.html" class="navbar-link">Care</a>
+                </li>
+                <li>
+                  <a href="../pages/gifts.html" class="navbar-link">Gifts</a>
+                </li>
+                <li>
+                  <a href="../pages/contact.html" class="navbar-link"
+                    >Contact</a
+                  >
+                </li>
+                <li>
+                  <a href="../pages/about.html" class="navbar-link">About</a>
+                </li>
+              </ul>
+              <div class="btn-group navbar-menu">
+                <button
+                  class="navbar-toggler"
+                  type="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  <i class="bi bi-list menu-icon"></i>
+                </button>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a href="./pages/plants.html" class="navbar-link">Plants</a>
+                  </li>
+                  <li>
+                    <a href="./pages/care.html" class="navbar-link">Care</a>
+                  </li>
+                  <li>
+                    <a href="./pages/gifts.html" class="navbar-link">Gifts</a>
+                  </li>
+                  <li>
+                    <a href="./pages/contact.html" class="navbar-link"
+                      >Contact</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./pages/about.html" class="navbar-link">About</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
         </div>
-      </nav>
+      </div>
     </header>
 
     <main>
       <section class="main-picture">
-        <h2 class="title">Contact</h2>
+        <h2 class="title fs-4">
+          <span class="material-symbols-outlined"> eco </span>Contact us<span
+            class="material-symbols-outlined"
+          >
+            eco
+          </span>
+        </h2>
         <div class="container py-4">
           <form id="contactForm">
             <!-- Name input -->
-            <div class="mb-3">
-              <label class="form-label" for="name">Name</label>
-              <input
-                class="form-control"
-                id="name"
-                type="text"
-                placeholder="Name"
-              />
-            </div>
+            <div class="row">
+              <div class="mb-3 col">
+                <input
+                  class="form-control form-background"
+                  id="name"
+                  type="text"
+                  placeholder="Name"
+                />
+              </div>
 
-            <!-- Email address input -->
-            <div class="mb-3">
-              <label class="form-label" for="emailAddress">Email Address</label>
-              <input
-                class="form-control"
-                id="emailAddress"
-                type="email"
-                placeholder="Email Address"
-              />
+              <!-- Email address input -->
+              <div class="mb-3 col">
+                <input
+                  class="form-control"
+                  id="emailAddress"
+                  type="email"
+                  placeholder="Email Address"
+                />
+              </div>
             </div>
 
             <!-- Message input -->
             <div class="mb-3">
-              <label class="form-label" for="message">Message</label>
               <textarea
                 class="form-control"
                 id="message"
@@ -109,7 +149,11 @@
 
             <!-- Form submit button -->
             <div class="d-grid">
-              <button class="btn btn-primary btn-lg" type="submit">
+              <button
+                class="btn btn-lg button-color"
+                type="submit"
+                style="background-color: #4a5841"
+              >
                 Submit
               </button>
             </div>
@@ -119,23 +163,23 @@
     </main>
     <footer>
       <div>
-        <ul class="footer-links">
+        <ul class="footer-links fs-5">
           <li>About</li>
           <li>Contact</li>
           <li>Reviews</li>
         </ul>
       </div>
-      <div>
-        <ul class="footer-links">
+      <div class="text-center">
+        <ul class="footer-links fs-5">
           <li>Join Bloom</li>
-          <li>Contact</li>
-          <li>Reviews</li>
+          <li class="fs-6">Sign up for special offers and inspiration</li>
+          <input type="text" class="my-3 fs-6" placeholder="Enter your email" />
         </ul>
       </div>
       <div>
-        <ul class="footer-links">
-          <li>Join Bloom</li>
-          <li>Contact</li>
+        <ul class="footer-links fs-5">
+          <li>Delivery & returns</li>
+          <li>Plant blog</li>
           <li>Reviews</li>
         </ul>
       </div>
